feat: http querry

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,11 +3,7 @@
     <div class="navbar-brand">Entry test</div>
     <ul class="navbar-nav nav">
       <li class="nav-item">
-        <a
-          class="nav-link"
-          aria-current="page"
-          routerLink="navigator"
-          [queryParams]="{ tab: 0 }"
+        <a class="nav-link" routerLink="navigator" [queryParams]="{ tab: 0 }"
           >Navigator</a
         >
       </li>
