--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -19,7 +19,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let row of transactions">
+      <tr *ngFor="let row of visibleTransactions">
         <td>{{ row.name.first }} {{ row.name.last }}</td>
         <td>{{ row.amount | currency }}</td>
       </tr>
