--- a/src/app/components/summary-page/summary-page.component.html
+++ b/src/app/components/summary-page/summary-page.component.html
@@ -1,1 +1,24 @@
-<p>summary-page works!</p>
+<div class="summary-wrapper bg-light">
+  <div class="container p-4 bg-light welcome-wrapper">
+    <div class="card mx-auto" style="width: 18rem">
+      <div class="card-body">
+        <h4 class="card-title text-center p-2">Welcome</h4>
+        <p class="card-text text-center">You have 100 transactions</p>
+      </div>
+    </div>
+  </div>
+  <div class="cards-wrapper container p-4 bg-light">
+    <div *ngFor="let card of cards" class="card mx-auto" style="width: 20rem">
+      <div class="card-body">
+        <h4 class="card-title">{{ card.transactionsNumber }}</h4>
+        <h5 class="card-title">{{ card.title }}</h5>
+        <a
+          [routerLink]="card.path"
+          [queryParams]="card.param"
+          class="btn btn-primary"
+          >See all</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
