--- a/src/app/components/summary-page/summary-page.component.html
+++ b/src/app/components/summary-page/summary-page.component.html
@@ -3,7 +3,9 @@
     <div class="card mx-auto" style="width: 18rem">
       <div class="card-body">
         <h4 class="card-title text-center p-2">Welcome</h4>
-        <p class="card-text text-center">You have 100 transactions</p>
+        <p class="card-text text-center">
+          You have {{ allCardsNumbers }} transactions
+        </p>
       </div>
     </div>
   </div>
